--- a/docs/presentation_0.3.0.tex
+++ b/docs/presentation_0.3.0.tex
@@ -80,7 +80,7 @@
 \title[Rendu final : Proost]{Rendu final de projet génie logiciel : Proost}
 \author[Projet génie logiciel]{
     \normalsize
-    Arthur~Adjedj \and 
+    Arthur~Adjedj \and
     Augustin~Albert \and \\
     Vincent~Lafeychine \and
     Lucas~Tabary-Maujean \and \\ \vspace{0.2cm}
@@ -122,21 +122,21 @@
     \section{Présentation générale}
 
         \begin{frame}[fragile]{Présentation du projet}
-        
+
             \begin{block}{Qu'est-ce que Proost ?}
-                
+
                 Proost est un assistant de preuve écrit en Rust basé sur le calcul des constructions. À terme, il est prévu que cela soit remplacé par le calcul observationnel des constructions $\left(\mathrm{CC}^{\mathrm{obs}+}\right)$.
 
             \end{block} \pause
 
             \begin{block}{Quel est le langage de preuve ?}
-                
+
                 Il s'agit de Madelaine, un nouveau langage inspiré de Coq, Lean, \dots
 
             \end{block} \pause
 
             \begin{exampleblock}{Exemple de code}
-                
+
                 \begin{lstlisting}[language=mdln]
                     def And: Prop -> Prop -> Prop :=
                         fun A B: Prop => (C: Prop) -> (A -> B -> C) -> C
@@ -147,14 +147,14 @@
         \end{frame}
 
         \begin{frame}{Philosophie du projet}
-            
+
             \begin{alertblock}{Points importants}
-                
+
                 \begin{itemize}
                     \item Isolation du kernel pour assurer la correction de l'implémentation \pause
                     \item API d'interface avec le noyau \pause
                     \item Expérience utilisateur agréable (LSP, coloration syntaxique, toplevel) \pause
-                    \item Optimisation mémoire et temporelle du type-checking
+                    \item Optimisation en temps et en mémoire du type-checking
                 \end{itemize}
 
             \end{alertblock}
@@ -164,9 +164,9 @@
     \section{Description de la théorie implémentée}
 
         \begin{frame}[fragile]{Univers}
-            
+
             \begin{block}{Hiérarchie prédicative}
-        
+
                 Type 0 : Type 1 : \dots
 
                 \begin{center}
@@ -176,13 +176,13 @@
                         \infer2{\Gamma \vdash  \Pi(x : A).\;  B: \mathtt{Type}\ \max u\ v}
                     \end{prooftree}
                 \end{center}
-                
+
             \end{block}
 
             \pause
 
             \begin{block}{Univers imprédicatif proof-irrelevant : Prop}
-                
+
                 Prop : Type 0
 
                 \begin{center}
@@ -198,20 +198,20 @@
         \end{frame}
 
         \begin{frame}[fragile]{Polymorphisme d'univers}
-            
+
             \begin{block}{Hiérarchie contenant Prop}
-               
+
                 \begin{tabular}{lclclcl}
                     \texttt{Prop} &:& \texttt{Type 0} &:& \texttt{Type 1} &:& \dots \\
                     \texttt{Sort 0} &:& \texttt{Sort 1} &:& \texttt{Sort 2} &:& \dots
                 \end{tabular}
-                
+
             \end{block}
 
             \vfill
 
             \begin{exampleblock}{Exemple}
-                
+
                 \begin{lstlisting}[language=mdln]
                     def id.{u} := fun A: Sort u, x: A => x
                 \end{lstlisting}
@@ -221,9 +221,9 @@
         \end{frame}
 
         \begin{frame}[fragile]{Types inductifs variés}
-            
+
             \begin{exampleblock}{Types inductifs implémentés}
-                
+
                 \begin{itemize}
                     \item \lstinline{False} et \lstinline{True}
                     \item \lstinline{Nat}, \lstinline{Eq}, \dots
@@ -232,7 +232,7 @@
             \end{exampleblock} \pause
 
             \begin{exampleblock}{Exemple d'utilisation de \lstinline{Eq} et de \lstinline{Nat}:}
-                
+
                 \begin{lstlisting}[language=mdln]
                     def add := fun x: Nat => Nat_rec.{1}
                         (fun _: Nat => Nat) x (fun _ n: Nat => Succ n)
@@ -249,9 +249,9 @@
         \end{frame}
 
         \begin{frame}{Égalité}
-            
+
             \begin{block}{Actuellement}
-                
+
                 Égalité intensionnelle à la MLTT
 
             \end{block}
@@ -260,7 +260,7 @@
             \pause
 
             \begin{alertblock}{Dans le futur}
-                
+
                 Égalité observationnelle à la $\mathrm{CC}^{\mathrm{obs}+}$
 
             \end{alertblock}
@@ -270,9 +270,9 @@
     \section{Caractéristiques de Proost}
 
         \begin{frame}[fragile]{Toplevel}
-            
+
             \begin{block}{Caractéristiques}
-                
+
                 \begin{itemize}
                     \item Accessible via l'invite de commandes \pause
                     \item Coloration syntaxique \pause
@@ -282,7 +282,7 @@
             \end{block} \pause
 
             \begin{block}{Toplevel}
-                
+
                 \begin{lstlisting}[language=mdln]
                     > check add Zero (fun id x: Prop => x)
                     (*$\ballotx$*)       ^----------------------------^
@@ -296,13 +296,26 @@
 
         \end{frame}
 
-        \begin{frame}{Type-checking}
-            
+        \begin{frame}{Noyau}
+
             \begin{block}{Caractéristiques}
-                
+
                 \begin{itemize}
-                    \item Lourde mémoïsation des termes et des calculs sur ces derniers (WHNF, substitution, var-shifting, \dots) \pause
-                    \item Système d'arène pour gérer efficacement les \textit{lifetimes} des termes
+										\item Mémoïsation quasi-systématique des
+											calculs sur les termes (WHNF, substitution,
+											\textit{var-shifting}, \dots): soit dans des \textit{hashmaps},
+											soit dans les termes eux-mêmes;\pause
+										\item rendu plausible par la mise en place d'une
+											\emph{arène} (cf. implémentation de DDB) telle que: \pause
+										\begin{itemize}
+												\item chaque terme est unique dans l'arène; \pause
+												\item chaque arène est associée de manière unique à une
+													\textit{lifetime} (garanties statiques, \dots)
+										\end{itemize}
+
+										\item API \textit{safe} utilisable seule et avec des
+											syntaxes simples (en interne, pour la \textbf{construction}
+											de termes: type clôture).
                 \end{itemize}
 
             \end{block}
@@ -310,9 +323,9 @@
         \end{frame}
 
         \begin{frame}{LSP}
-            
+
             \begin{block}{Description}
-                
+
                 Le LSP s'appelle <<~Tilleul~>> et se compose :
 
                 \begin{itemize}
@@ -326,7 +339,7 @@
             \pause
 
             \begin{block}{Avancement}
-                
+
                 Une preuve de concept est actuellement disponible sur la partie I/O. Cependant la partie logique n'a pas encore été commencée.
 
             \end{block}
@@ -336,9 +349,9 @@
     \section{Pour la suite}
 
         \begin{frame}{Projets pour la suite}
-            
+
             \begin{block}{Dans un futur proche}
-                
+
                 \begin{itemize}
                     \item Égalité observationnelle \pause
                     \item LSP entièrement fonctionnel \pause
@@ -351,7 +364,7 @@
             \pause
 
             \begin{block}{Dans un second temps}
-                
+
                 \begin{itemize}
                     \item Types inductifs \pause
                     \item Unification
