--- a/docs/specs.tex
+++ b/docs/specs.tex
@@ -118,34 +118,36 @@
   to change the purposes of the tool. An example of that is the syntax of the
   language, which is still largely unstable. }
 
-\section{General purpose and functions} This project aims at providing a small
-tool for typechecking expressions written in the language of the Calculus of
-Construction (CoC). This tool shall be both terminal and editor based through
-the \texttt{proost} program that provides both compiler and toplevel-like
-capacities and options and a LSP called \texttt{tilleul}. The file extension
-used by both programs is \texttt{.mdln}, which is short for \emph{madelaine},
-the name of the language manipulated by users in these files.
+\section{General purpose and functions}
+This project aims at providing a small tool for typechecking expressions written
+in the language of the Calculus of Construction (CoC). This tool shall be both
+terminal and editor based through the \texttt{proost} program that provides both
+compiler and toplevel-like capacities and options and a LSP called
+\texttt{tilleul}. The file extension used by both programs is \texttt{.mdln},
+which is short for \emph{madeleine}, the name of the language manipulated by
+users in these files.
 
 
-\section{Project structure} Each category of the project is assigned some or all
-members of the group, meaning the designated members will \emph{mainly} make
-progress in the associated categories and review the corresponding advancements.
-Any member may regardless contribute to any part of the development of the tool.
+\section{Project structure}
+Each category of the project is assigned some or all members of the group,
+meaning the designated members will \emph{mainly} make progress in the
+associated categories and review the corresponding advancements. Any member may
+regardless contribute to any part of the development of the tool.
 
 Some specific categories and items will be added a star \etun or two \etde to
-indicate whether they are respectively late requirements (for the last release
-due in December) or extra requirements that will be considered only if there is
-enough time.
+indicate whether they are respectively current objectives or extra long-term
+requirements that may or may not be implemented.
+
 
 \subsection{Language design \members{all members}} The \texttt{proost} tool is a
 simple proof assistant and does not provide any tactics. As new features arrive
-from extensions of the kernel type theory, the \emph{madelaine} language must
+from extensions of the kernel type theory, the \emph{madeleine} language must
 provide convenient shorthands and notations. The syntax of commands is the
 following:
 \begin{itemize}
-	\item \etun ¤import relative_path_to_file¤ typechecks
+	\item ¤import relative_path_to_file¤ typechecks
 		and loads the file in the current environment;
-	\item \etde ¤search t¤ searches ¤t¤ in all known terms, where ¤t¤ may contain
+	\item \etun ¤search t¤ searches ¤t¤ in all known terms, where ¤t¤ may contain
 		¤_¤ joker identifiers (see section \ref{sec:unification});
 	\item ¤def a := t¤
 		defines an alias ¤a¤ that can be used in any following command;
@@ -157,13 +159,13 @@ following:
 \end{itemize}
 
 Below is an overview of the syntax of the terms, including hypothetical
-developments. The syntax is strongly inspired by that of OCaml. Comments are
+developments. The syntax is partially inspired by that of OCaml. Comments are
 defined using the keyword \texttt{//}.
 
-\vspace{1.2mm}
-elementary type theory:
+\paragraph{Elementary type theory}
+\phantom{hello}
 \begin{proost}
-// Construction of natural numbers
+// Church construction of natural numbers
 def Nat :=
   (N: Type) -> (N -> N) -> N -> N
 
@@ -177,40 +179,46 @@ def succ := fun n: Nat, N: Type =>
 check succ: Nat -> Nat
 \end{proost}
 
-\etun universe polymorphism:
+\paragraph{Universe polymorphism}
+\phantom{hello}
 \begin{proost}
 def foo.{i,j} : Type (max i j) + 1
 := Type i -> Type j
 \end{proost}
 
-\etde unification:
+\paragraph{\etde Unification}
+\phantom{hello}
 \begin{proost}
 def comm := \/x y, x + y = y + x
 \end{proost}
 
-\etde existential types:
+\paragraph{\etun Existential types} as well as other usual types.
 \begin{proost}
 def t := E n, n * n - n + 4 = 0
 \end{proost}
 
+\paragraph{\etde General framework for inductive types.} For the moment,
+inductive types and their recursors are hardcoded in the kernel.
+\begin{proost}
+def inductive Toto :=
+  Gur(Nat) | Baba(Toto)
+\end{proost}
 
-\subsection{Toplevel  \members{AuA}} The \texttt{proost} command, when provided
-with no argument, is expected to behave like a toplevel, akin to \texttt{ocaml}
-or \texttt{coqtop}. There, user is greeted with a prompt and may enter commands.
-When provided with existing file paths, ¤proost¤ intends to typecheck them in
-order, that is, reading them as successive inputs in the toplevel. Further
-features for this \emph{might} include a more extended notion of ``modules''
-where files may provides scopes.
+\subsection{Toplevel  \members{AuA}}
+The \texttt{proost} command, when provided with no argument, is expected to
+behave like a toplevel, akin to \texttt{ocaml} or \texttt{coqtop}. There, user
+is greeted with a prompt and may enter commands. When provided with existing
+file paths, ¤proost¤ intends to typecheck them in order, that is, reading them
+as successive inputs in the toplevel. Later features for this include a more
+extended notion of ``modules'' \etde where files provide scopes.
 \begin{center}
 	\fbox{\includegraphics{media/screenshot_toplevel}}
 \end{center}
 
 
-\subsection{\etun LSP \members{VL}}
-\texttt{tilleul} shall provide an
-implementation of the Language Server Protocol in order to provide linting and
-feedback during an editing session.
-
+\subsection{LSP \members{VL}}
+The \texttt{tilleul} binary provides an implementation of the Language Server
+Protocol and will gradually implement more features from it \etde.
 
 \subsection{Parsing \members{AuA}}
 The parsing approach is straightforward and
@@ -226,17 +234,17 @@ manage them with a relative level of efficiency. The type theory used to build
 the terms will be successively extended with:
 \begin{itemize}
   \item abstractions, \(\Pi\)-types, predicative universes with \(\mathsf{Prop}\);
-  \item \etun universe polymorphism;
-  \item \etun \(\Sigma\)-types, equality types, natural numbers;
+  \item universe polymorphism;
+	\item equality types, natural numbers;
+  \item \etun \(\Sigma\)-types, etc.;
   \item \etde extraction;
   \item \etde lists, records, accessibility predicate.
 \end{itemize}
 
 
-\subsection{\etun Optimisation \members{ArA LTM}}
-Extra care must be put into
-designing an efficient memory management model for the kernel, along with
-satisfactory typing and reduction algorithms.
+\subsection{Optimisation \members{ArA LTM}}
+Extra care must be put into designing an efficient memory management model for
+the kernel, along with satisfactory typing and reduction algorithms.
 
 In particular, the first iteration of the program manipulates directly terms on
 the heap, with no particular optimisation: every algorithm is applied soundly
@@ -249,21 +257,18 @@ model also provides stronger isolation properties, preventing several memory
 pools (\emph{arena} is the technical term used in the project) from interacting
 with one another.
 
-This can be further extended with other invariants like ensuring every term in
-memory is in weak head normal form.
-
 \subsection{\etde Unification}\label{sec:unification}
-Early versions of the tool may require the user
-to explicit every type at play. Successive versions may gradually include
-unification tools (meta-variables) of better quality to assist the user and
-alleviate some of their typing-annotation burden.
+Early versions of the tool may require the user to explicit every type at play.
+Successive versions may gradually include unification tools (meta-variables) of
+better quality to assist the user and alleviate some of their typing-annotation
+burden.
 
 \subsection{Developpement tools \members{VL LTM}}
-Tests are mandatory in every
-part of the project. A tool originally developed by the Mozilla team was
-modified to allow for a more precise branch coverage of the project. The Nix
-framework is used to automatically build and package the application as well as
-generating a docker image and providing developers tools of the same version.
+Tests are mandatory in every part of the project. A tool originally developed by
+the Mozilla team was modified to allow for a more precise branch coverage of the
+project. The Nix framework is used to automatically build and package the
+application as well as generating a docker image and providing developers tools
+of the same version.
 
 % TODO elaborate, maybe
 \end{document}
